--- a/GameEngine/Builds/VisualStudio2015/GameEngine_App.vcxproj
+++ b/GameEngine/Builds/VisualStudio2015/GameEngine_App.vcxproj
@@ -1695,6 +1695,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\GameHUD.h" />
+    <ClInclude Include="..\..\Source\GameLoop.h" />
+    <ClInclude Include="..\..\Source\DrawableObject.h" />
+    <ClInclude Include="..\..\Source\GameModel.h" />
     <ClInclude Include="..\..\Source\GameView.h" />
     <ClInclude Include="..\..\Source\MainComponent.h" />
     <ClInclude Include="..\..\..\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h" />
@@ -2293,6 +2296,8 @@
     <ClInclude Include="..\..\..\JUCE\modules\juce_video\juce_video.h" />
     <ClInclude Include="..\..\JuceLibraryCode\AppConfig.h" />
     <ClInclude Include="..\..\JuceLibraryCode\JuceHeader.h" />
+    <ClInclude Include="..\..\Source\SquareObject.h" />
+    <ClInclude Include="..\..\Source\Vertex.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\JUCE\modules\juce_audio_formats\codecs\flac\Flac Licence.txt" />
